tweak: Correctly reflow on smaller devices

--- a/Frontend/styles/layout/cards.less
+++ b/Frontend/styles/layout/cards.less
@@ -1,13 +1,23 @@
 .card-container {
     -webkit-column-break-inside: avoid;
     column-break-inside: avoid;
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
     
     .card {
         display: inline-block;
         overflow: visible;
+    }
+    
+    @media(min-width: 601px) {
+        
+    }
+    
+    @media(min-width: 993px) {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
     }
 }
 
