--- a/Frontend/styles/styles.css
+++ b/Frontend/styles/styles.css
@@ -16,13 +16,20 @@ background > div {
 .card-container {
   -webkit-column-break-inside: avoid;
   column-break-inside: avoid;
-  -webkit-column-count: 2;
-  -moz-column-count: 2;
-  column-count: 2;
+  -webkit-column-count: 1;
+  -moz-column-count: 1;
+  column-count: 1;
 }
 .card-container .card {
   display: inline-block;
   overflow: visible;
+}
+@media (min-width: 993px) {
+  .card-container {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  }
 }
 .card .card-section {
   padding: 20px;
